--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   however, I am also practicing to improve at SQL. This website is a look ath projects I'm currently working on.</h4>
           </div>
           <div class="col">
-            <img src="img/tianaAboutme.png" alt="Image of Tiana Larmond" />
+            <img src="img/tianaAboutMe.png" alt="Image of Tiana Larmond" />
           </div>
       </div>
       
