--- a/index.html
+++ b/index.html
@@ -133,13 +133,26 @@
                   <div class="card-body">
                       <h5 class="card-title">Makeup</h5>
                       <p class="card-text">
-                          This website was created because of my love of makeup. It presents a general overview of what makeup is and the different
-                          types of makeup. It also features some big makeup brands.
+                          This website was created in Visual Studio Code, utilising HTML, CSS and JavaScript. It's an informational website.
+                          <br> <b>Status: Hosted, Not Complete</b>
                       </p>
                       <a class="btn btn-primary" href="makeup.html" role="buttom" style="color:white">View</a>
                   </div>
               </div>
           </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="img/laBoulangerieLogo.png" class="card-img-top" alt="Makeup Image">
+                <div class="card-body">
+                    <h5 class="card-title">La Boulangerie </h5>
+                    <p class="card-text">
+                        This website was created in Visual Studio 2022, utilising JavaScript, C#, ASP.NET and CSS. It's an e-commerce website with membership and administration.
+                        <br> <b>Status: Not Hosted, Complete</b>
+                    </p>
+                    <a class="btn btn-primary disabled" href="" role="buttom" style="color:white">View</a>
+                </div>
+            </div>
+        </div>
       </div>
   </div>
    
