--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="img/laBoulangerieLogo.png" class="card-img-top" alt="Makeup Image">
+                <img src="img/laBoulangerieLogo.png" class="card-img-top" alt="La Boulangerie Francaçaise Logo">
                 <div class="card-body">
-                    <h5 class="card-title">La Boulangerie </h5>
+                    <h5 class="card-title">La Boulangerie Francaçaise</h5>
                     <p class="card-text">
                         This website was created in Visual Studio 2022, utilising JavaScript, C#, ASP.NET and CSS. It's an e-commerce website with membership and administration.
                         <br> <b>Status: Not Hosted, Complete</b>
