--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   
       <div class="row">
           <div class="col">
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem; height: 36rem">
                   <img src="img/makeupCardImage.png" class="card-img-top" alt="Makeup Image">
                   <div class="card-body">
                       <h5 class="card-title">Makeup</h5>
@@ -142,7 +142,7 @@
               </div>
           </div>
           <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem; height: 36rem">
                 <img src="img/laBoulangerieLogo.png" class="card-img-top" alt="La Boulangerie Francaçaise Logo">
                 <div class="card-body">
                     <h5 class="card-title">La Boulangerie Francaçaise</h5>
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </div>
-      </div>
+    </div>
   </div>
    
     <br><br>
